2017-08-11  NIIBE Yutaka  <gniibe@fsij.org>

	* VERSION: 1.2.5.
	* chopstx: Update to 1.4.

	* src/gnuk.ld.in (__process3_stack_size__): Tweak the size.

	* src/configure: Define STM32F103_OVERRIDE_FLASH_SIZE_KB for
	BULE_PILL.

	* src/configure: Let generate src/config.mk.
	* src/Makefile: Rename from src/Makefile.in.
	* regnual/Makefile: Use src/config.mk.

2017-08-03  NIIBE Yutaka  <gniibe@fsij.org>

	* src/openpgp.c (cmd_terminate_df): Fix for admin-less mode.

2017-08-03  Jeremy Drake <jeremydrake+gnuk@eacceleration.com>

	* regnual/regnual.c (main): Allow compile time
	flash size definition by STM32F103_OVERRIDE_FLASH_SIZE_KB.

2017-08-02  Jeremy Drake  <jeremydrake+gnuk@eacceleration.com>

	* src/flash.c (flash_terminate): Erase Certificate DO, too.

2017-08-01  NIIBE Yutaka  <gniibe@fsij.org>

	* src/openpgp.c (FILE_CARD_TERMINATED_OPENPGP): Remove.
	(cmd_select_file): Don't change file_selection.

2017-07-19  NIIBE Yutaka  <gniibe@fsij.org>

	* src/mod.c (mod_inv): Clear TMP.

	* src/configure (REVISION): Generate even when no git.

	* polarssl/library/bignum.c (mpi_exp_mod): Call mpi_grow for X
	after the initialization of RR.

2017-07-18  NIIBE Yutaka  <gniibe@fsij.org>

	* src/configure: Bark when no git available.

2017-07-18  Anthony Romano <anthony.romano@coreos.com>

	* docker: New.

2017-07-18  Anthony Romano <anthony.romano@coreos.com>

	* src/main.c (MEMORY_SIZE, MEM_HEAD_IS_CORRUPT, MEM_HEAD_CHECK):
	New.
	(gnuk_malloc, gnuk_free): Add calls to MEM_HEAD_CHECK.

	* src/gnuk.h (FATAL_HEAP): New.

2017-07-18  Anthony Romano <anthony.romano@coreos.com>

	* src/openpgp-do.c (gpg_reset_algo_attr): New.
	(rw_algorithm_attr): Use gpg_reset_algo_attr.
	Fix null dereference.

2017-07-18  Anthony Romano <anthony.romano@coreos.com>

	* src/mod.c (mod_reduce): Clean up unused code.

2017-07-18  Anthony Romano <anthony.romano@coreos.com>

	* src/call-rsa.c (modulus_calc): Free modulus on error.
	(rsa_genkey): Remove bogus check, and call chopstx_cleanup_pop